# TetrisCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
inc/: block.h  blockPosition.h  colors.h  game.h  grid.h
src/: block.cpp  blockPosition.cpp  blocks.cpp  colors.cpp  game.cpp  grid.cpp
